--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-copy": "~0.4.1"
   },
   "dependencies": {
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "phonegap": "~3.1.0-0.15.0"
   }
 }
